--- a/ui/ecofunds-ui/package.json
+++ b/ui/ecofunds-ui/package.json
@@ -1,26 +1,76 @@
 {
-  "name": "ecofunds-ui",
+  "name": "thefront-js--react-scripts",
+  "author": "maccarian",
+  "email": "hi@maccarianagency.com",
+  "version": "5.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "prettier:fix": "prettier './src/**/*.js' --write",
+    "eslint:fix": "eslint ./src --fix",
+    "codeStyle:fix": "npm run prettier:fix && npm run eslint:fix",
+    "clear-all": "rimraf ./build ./node_modules"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "last 2 versions",
+      "Firefox ESR",
+      "not dead",
+      "not IE 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@toruslabs/solana-embed": "^2.0.0",
+    "aos": "^2.3.4",
+    "card-validator": "^8.1.1",
+    "formik": "^2.2.9",
+    "jarallax": "^2.1.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-visibility-sensor": "^5.1.1",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^3.3.1",
+    "crypto-browserify": "3.12.0",
+    "crypto-random-string": "^3.3.0",
+    "stream": "^0.0.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-syntax-flow": "^7.21.4",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.39.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
-  }
+    "prettier": "^2.8.7",
+    "rimraf": "^5.0.0",
+    "typescript": "^5.0.4",
+    "yarn-upgrade-all": "^0.7.2"
+  },
+  "browser": {
+    "crypto": false
+}
 }
